# simpleRayTracer

./: .gitignore  CMakeLists.txt  CSG.cpp  CSG.h  Cube.cpp  Cylinder.cpp  DirectionalLightSource.cpp  DirectionalLightSource.h  ImageDisplay.cpp  ImageDisplay.h  ObjectGroup.cpp  ObjectGroup.h  Plane.cpp  PointLightSource.cpp  README.md  README.txt  Scene.cpp  Scene.h  SceneParser.cpp  SceneParser.h  Sphere.cpp  Sphere.h  SpotLightSource.cpp  Torus.cpp  Torus.h  cubetest.txt  rayTracerMain.cpp  sampleScene.txt  snowman.txt  testScene.txt  utility.cpp  utility.h
scenes/: csg  csg.txt  cube  cylinder  cylinder.txt  plane  room.txt  sample.txt  simpletest  simpletest.txt  simpletest2.txt  snowman.txt  spheres.txt  spotlight  spotlight.txt  supersampling  torus.txt
